HMCLCore/src/test/resources/crash-report/need_jdk112.txt
2023-06-11 12:15:14,674 main ERROR Error processing element Queue ([Appenders: null]): CLASS_NOT_FOUND
[12:15:14] [main/INFO]: ModLauncher running: args [--username, 520, --version, 榫欎箣鍐掗櫓v3.3a, --gameDir, D:\versions\榫欎箣鍐掗櫓v3.3a, --assetsDir, D:\assets, --assetIndex, 1.16, --uuid, 80a1da362ce83d64be4612a92ee7248e, --accessToken, 鉂勨潉鉂勨潉鉂勨潉鉂勨潉, --userType, legacy, --versionType, HMCL 3.5.4, --width, 854, --height, 480, --launchTarget, fmlclient, --fml.forgeVersion, 36.2.35, --fml.mcVersion, 1.16.5, --fml.forgeGroup, net.minecraftforge, --fml.mcpVersion, 20210115.111550, --fullscreen]
[12:15:14] [main/INFO]: ModLauncher 8.1.3+8.1.3+main-8.1.x.c94d18ec starting: java version 1.8.0_371 by Oracle Corporation
[12:15:15] [main/INFO]: Added Lets Encrypt root certificates as additional trust
[12:15:15] [main/INFO]: SpongePowered MIXIN Subsystem Version=0.8.4 Source=file:/D:/libraries/org/spongepowered/mixin/0.8.4/mixin-0.8.4.jar Service=ModLauncher Env=CLIENT
[12:15:16] [main/INFO]: [org.antlr.v4.runtime.ConsoleErrorListener:syntaxError:38]: line 13:0 token recognition error at: '`'
[12:15:16] [main/INFO]: [org.antlr.v4.runtime.ConsoleErrorListener:syntaxError:38]: line 2:141 token recognition error at: ';'
Init CreativeCore coremods ...
[12:15:18] [main/ERROR]: Mixin config modernworldcreation.mixin.json does not specify "minVersion" property
[12:15:18] [main/INFO]: Successfully loaded Mixin Connector [hellfirepvp.astralsorcery.MixinConnector]
[12:15:18] [main/INFO]: Successfully loaded Mixin Connector [tictim.paraglider.MixinConnector]
[12:15:18] [main/INFO]: Successfully loaded Mixin Connector [vazkii.patchouli.common.MixinConnector]
[12:15:18] [main/INFO]: Successfully loaded Mixin Connector [com.integral.enigmaticlegacy.MixinConnector]
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: java.lang.UnsupportedClassVersionError: icyllis/modernui/forge/MixinConnector has been compiled by a more recent version of the Java Runtime (class file version 55.0), this version of the Java Runtime only recognizes class file versions up to 52.0
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at java.lang.ClassLoader.defineClass1(Native Method)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at java.lang.ClassLoader.defineClass(Unknown Source)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.TransformingClassLoader.loadClass(TransformingClassLoader.java:138)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.TransformingClassLoader.loadClass(TransformingClassLoader.java:98)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at java.lang.ClassLoader.loadClass(Unknown Source)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at java.lang.Class.forName0(Native Method)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at java.lang.Class.forName(Unknown Source)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.service.modlauncher.ModLauncherClassProvider.findClass(ModLauncherClassProvider.java:67)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinConnectorManager.loadConnectors(MixinConnectorManager.java:70)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinConnectorManager.inject(MixinConnectorManager.java:59)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.platform.MixinPlatformManager.inject(MixinPlatformManager.java:196)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.MixinBootstrap.inject(MixinBootstrap.java:202)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.MixinLaunchPluginLegacy.initializeLaunch(MixinLaunchPluginLegacy.java:201)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at org.spongepowered.asm.launch.MixinLaunchPluginLegacy.initializeLaunch(MixinLaunchPluginLegacy.java:195)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.LaunchPluginHandler.lambda$announceLaunch$9(LaunchPluginHandler.java:97)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at java.util.HashMap.forEach(Unknown Source)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.LaunchPluginHandler.announceLaunch(LaunchPluginHandler.java:97)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.LaunchServiceHandler.launch(LaunchServiceHandler.java:52)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.LaunchServiceHandler.launch(LaunchServiceHandler.java:72)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.Launcher.run(Launcher.java:82)
[12:15:18] [main/INFO]: [java.lang.ThreadGroup:uncaughtException:-1]: 	at cpw.mods.modlauncher.Launcher.main(Launcher.java:66)
Exception in thread "main"